--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -2,15 +2,16 @@
 <div>
 	<%= link_to "Edit", edit_episode_path(@episode) %>
 	<%= link_to "Destroy", episode_path(@episode), method: :delete, data: {confirm: "Are you sure?"} %>
+	<a href="/">Home</a>
 </div>
 
-<h2>topics</h2>
+<h2>Topics</h2>
 <%= render @episode.topics %>
 
-<h2>Add a topic</h2>
+<h2>Add a Topic</h2>
 <%= form_with model: [ @episode, @episode.topics.build ] do |form| %>
 	<p>
-		<%= form.label :name %> <br />
+		<%= form.label :name %> 
 		<%= form.text_field :name %> <br />
 	</p>
 	<p>
@@ -18,8 +19,8 @@
 		<%= form.text_field :timecode %>
 	</p>
 	<p>
-		<%= form.label :description %>
-		<%= form.text_field :description %>
+		<%= form.label :description %><br>
+		<%= form.text_area :description, cols:100, rows:5 %>
 	</p>
 	<p><%=form.submit %></p>
 <% end %>
